--- a/interim/sanitized.html
+++ b/interim/sanitized.html
@@ -138,7 +138,7 @@ THIS BOOK</p>
 </blockquote>
 
 
-<img class="overlay" width="100%" height="100%" src="https://raw.githubusercontent.com/marvindanig/english-literature/master/assets/images/el003.png" alt="Illustration: A PAGE FROM THE MANUSCRIPT OF BEOWULF">
+<img class="overlay" width="100%" height="100%" src="https://raw.githubusercontent.com/marvindanig/english-literature/master/assets/images/el003.jpg" alt="Illustration: A PAGE FROM THE MANUSCRIPT OF BEOWULF">
 
 
 <hr>
